--- a/main.html
+++ b/main.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+		<ol>
+			<li data-ns-test="shoppingList">Iphone</li>
+			<li data-ns-test="shoppingList">House</li>
+			<li data-ns-test="shoppingList">Bike</li>
+		</ol>
+	<ul>
+			<li data-ns-test="holidayList">Delhi</li>
+			<li data-ns-test="holidayList">Dubai</li>
+			<li data-ns-test="holidayList">UAE</li>
+		</ul>
 </body>
-
 </html>
